# PRayGround

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.orig  LICENSE  README.md  README_ja.md  appGenerator.sh  imgui.ini  prayground_config.h.in  sampleConfig.h.in
SDK/lib/DemandLoading/: CMakeLists.txt  CheckerBoardImage.h  DemandTextureImpl.h  DemandTextureManagerImpl.cpp  DemandTextureManagerImpl.h  EXRReader.cpp  EXRReader.h  Exception.h  ImageReader.cpp  Math.h  PageTableManager.h  Tex2D.h  TextureInfo.cpp  TileIndexing.h  TilePool.cpp  TilePool.h
apps/empty-app/: CMakeLists.txt  app.cpp  app.h  main.cpp
apps/rtcamp10/: CMakeLists.txt  Katsuo.mtl  app.cpp  app.h  kernels.cu  main.cpp  params.h  pseudo.cpp
examples/denoiser/: CMakeLists.txt  app.cpp  app.h  kernels.cu  main.cpp  params.h
examples/denoiser/cuda/: hitgroups.cu  raygen.cu  surfaces.cu  textures.cu  util.cuh
examples/motion_blur/: CMakeLists.txt  app.cpp  app.h  kernels.cu  main.cpp  params.h
examples/motion_blur/cuda/: hitgroups.cu  miss.cu  raygen.cu  textures.cu  util.cuh
examples/rayTracingNextWeek/: CMakeLists.txt  app.cpp  app.h  box_medium.cpp  box_medium.h  kernels.cu  main.cpp  params.h  sphere_medium.cpp  sphere_medium.h
examples/rayTracingNextWeek/cuda/: hitgroups.cu  raygen.cu  surfaces.cu  util.cuh
examples/render/: CMakeLists.txt  app.cpp  app.h  main.cpp  params.h
examples/render/cuda/: closesthit.cu  miss.cu  raygen.cu  surfaces.cu  textures.cu  util.cuh
examples/single_gas/: CMakeLists.txt  app.cpp  app.h  kernels.cu  main.cpp  params.h
examples/single_gas/cuda/: hitgroups.cu  miss.cu  raygen.cu  surfaces.cu  textures.cu  util.cuh
examples/thumbnail/: CMakeLists.txt  app.cpp  app.h  main.cpp  params.h
examples/thumbnail/cuda/: hitgroups.cu  miss.cu  raygen.cu  surfaces.cu  textures.cu  util.cuh
examples/thumbnail/data/: surfaces.cu
oprt/: CMakeLists.txt  oprt.cpp  oprt.h  oprt_dev.cpp  params.h  scene_config.h
oprt/app/: app.cpp  app.h  app_runner.cpp  app_runner.h  baseapp.cpp  baseapp.h  event.h  input.h  window.cpp  window.h
oprt/core/: aabb.h  api.cpp  api.h  bitmap.cpp  bitmap.h  bsdf.h  camera.h  color.h  cudabuffer.h  emitter.h  exception.cpp  file_util.cpp  file_util.h  film.cpp  film.h  interaction.h  load3d.h  material.h  onb.h  primitive.cpp  primitive.h  ray.h  scene.cpp  scene.h  shape.cpp  shape.h  stream_helpers.h  texture.h  transform.h  util.h
oprt/core/shaders/: bitmap.vert
oprt/emitter/: area.cpp  area.h  envmap.cpp  envmap.h  point.h
oprt/emitter/cuda/: area.cuh  envmap.cuh
oprt/emitter/optix/: area.cuh  envmap.cuh
oprt/ext/: CMakeLists.txt
oprt/ext/glad/: glad.c
oprt/ext/imgui/: CMakeLists.txt
oprt/gl/: fbo.h  shader.cpp  shader.h  texture.cpp  texture.h
oprt/material/: conductor.h  dielectric.h  diffuse.h  disney.h  emitter.h
oprt/material/cuda/: conductor.cuh  dielectric.cuh  diffuse.cuh  disney.cuh
oprt/math/: matrix.h  util.h  vec.h
oprt/optix/: accel.cpp  accel.h  context.cpp  context.h  denoiser.h  graph.h  helpers.h  instance.cpp  instance.h  macros.h  module.cpp  module.h  pipeline.cpp  pipeline.h  program.cpp  program.h  sbt.h  shape_instance.cpp  shape_instance.h  util.h
oprt/optix/cuda/: oprt.cu  util.cuh
oprt/shape/: cylinder.h  plane.h  sphere.h  trianglemesh.cpp  trianglemesh.h
oprt/texture/: bitmap.cpp  bitmap.h  checker.h  constant.h
pathtracer/: CMakeLists.txt  pathtracer.cpp  pathtracer_fullscratch.cpp  pt2.cpp  scene_file.h
pathtracer/core/: aabb.h  bsdf.h  cudabuffer.h  load3d.h  material.h  pathtracer.h  primitive.h  scene.h  shape.h  stream_helpers.h  texture.h  transform.h  util.h
pathtracer/material/: conductor.h  dielectric.h  diffuse.h  emitter.h
pathtracer/optix/: create_obj.cu  create_obj.h  pathtracer.cu  program.h  ray.h  sbt.h  texture.cuh  util.h
pathtracer/shape/: sphere.h  trianglemesh.cpp  trianglemesh.h
pathtracer/texture/: checker.h  constant.h  image.cpp  image.h
prayground/: CMakeLists.txt  prayground.h
prayground/app/: app_runner.cpp  app_runner.h  baseapp.cpp  baseapp.h  event.h  input.h  window.cpp  window.h
prayground/core/: aabb.h  attribute.cpp  attribute.h  bitmap.cpp  bitmap.h  bsdf.h  camera.cpp  camera.h  cexpr_map.h  color.h  cudabuffer.h  emitter.h  file_util.cpp  file_util.h  film.cpp  film.h  interaction.h  keypoint.h  load3d.cpp  load3d.h  loadxml.h  material.h  onb.h  ray.h  rtscene.h  sampler.h  sampling.cpp  sampling.h  scene.h  shape.cpp  shape.h  spectrum.h  stream_helpers.h  texture.h  transform.h  usd_loader.cpp  usd_loader.h  util.h
prayground/emitter/: area.cpp  area.h  envmap.cpp  envmap.h  point.cpp  point.h
prayground/ext/: CMakeLists.txt
prayground/gl/: fbo.cpp  fbo.h  primitive.cpp  primitive.h  shader.cpp  shader.h  texture.cpp  texture.h  util.h
prayground/material/: conductor.cpp  conductor.h  custom.h  dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  disney.cpp  disney.h  isotropic.cpp  isotropic.h  layered.cpp  layered.h  roughconductor.cpp  roughconductor.h  roughdielectric.cpp  roughdielectric.h  thinfilm.h
prayground/math/: frame.h  interop.h  matrix.h  noise.h  random.h  util.h  vec.h  vec_math.h
prayground/medium/: atmosphere.h  grid_medium.cpp  gridmedium.h  vdbgrid.h  volume.cpp  volume.h
prayground/optix/: accel.cpp  accel.h  context.cpp  context.h  denoiser.cpp  denoiser.h  dmm.h  geometry_accel.cpp  geometry_accel.h  helpers.h  instance.cpp  instance.h  instance_accel.cpp  instance_accel.h  macros.h  module.cpp  module.h  omm.cpp  omm.h  pipeline.cpp  pipeline.h  program.cpp  program.h  sbt.h  shape_instance.cpp  shape_instance.h  transform.cpp  transform.h  util.h
prayground/physics/: sph.cpp  sph.h
prayground/shape/: box.cpp  box.h  curves.cpp  curves.h  cylinder.cpp  cylinder.h  gltfmesh.h  objmesh.cpp  objmesh.h  pcd.cpp  pcd.h  plane.cpp  plane.h  primitivemesh.cpp  primitivemesh.h  shapegroup.h  sphere.cpp  sphere.h  trianglemesh.cpp  trianglemesh.h
prayground/texture/: bitmap.cpp  bitmap.h  checker.cpp  checker.h  constant.cpp  constant.h  gradient.h
(+531 files in other folders)
